@@ -1,5 +1,6 @@
 package uk.gov.hmcts.reform.prl.mapper.citizen;
 
+import uk.gov.hmcts.reform.prl.enums.LanguagePreference;
 import uk.gov.hmcts.reform.prl.enums.SpokenOrWrittenWelshEnum;
 import uk.gov.hmcts.reform.prl.enums.YesOrNo;
 import uk.gov.hmcts.reform.prl.enums.citizen.DisabilityRequirementEnum;
@@ -59,20 +60,22 @@ public class CaseDataReasonableAdjustmentsElementsMapper {
     private static final String CLOSE_BRACKET = ")";
     private static final String COLON = ": ";
 
-    public static void updateReasonableAdjustmentsElementsForCaseData(CaseData.CaseDataBuilder caseDataBuilder,
+    public static void updateReasonableAdjustmentsElementsForCaseData(CaseData.CaseDataBuilder<?,?> caseDataBuilder,
                                                       C100RebuildReasonableAdjustmentsElements c100RebuildReasonableAdjustmentsElements) {
         List<String> specialArrangementList = Arrays.stream(c100RebuildReasonableAdjustmentsElements.getSpecialArrangements())
-                .collect(Collectors.toList());
+                .toList();
 
         List<String> disabilityRequirementsList = Arrays.stream(c100RebuildReasonableAdjustmentsElements.getDisabilityRequirements())
-                .collect(Collectors.toList());
+                .toList();
 
         List<String> languageList = Arrays.stream(c100RebuildReasonableAdjustmentsElements.getLanguageNeeds())
-                .collect(Collectors.toList());
+                .toList();
 
         List<String> communicationHelps = nonNull(c100RebuildReasonableAdjustmentsElements.getCommunicationHelp())
                 ? Arrays.stream(c100RebuildReasonableAdjustmentsElements.getCommunicationHelp())
-                .collect(Collectors.toList()) : Collections.emptyList();
+                .toList() : Collections.emptyList();
+
+        YesOrNo isWelshRequired = isWelshRequired(languageList);
 
         caseDataBuilder
             .attendHearing(AttendHearing.builder()
@@ -89,7 +92,17 @@ public class CaseDataReasonableAdjustmentsElementsMapper {
                                .isDisabilityPresent(buildIsDisabilityPresent(disabilityRequirementsList))
                                .adjustmentsRequired(buildAdjustmentRequired(disabilityRequirementsList,
                                                                             c100RebuildReasonableAdjustmentsElements))
-                               .build());
+                               .build())
+            //PRL-3382 - Update Welsh language requirements for c100 citizen application
+            .welshLanguageRequirement(isWelshRequired)
+            .welshLanguageRequirementApplication(YesOrNo.Yes.equals(isWelshRequired)
+                                                     ? LanguagePreference.welsh : LanguagePreference.english)
+            .welshLanguageRequirementApplicationNeedEnglish(YesOrNo.Yes);
+    }
+
+    private static YesOrNo isWelshRequired(List<String> languageList) {
+        return !languageList.isEmpty()
+            && languageList.contains(READ_WRITE_WELSH) ? YesOrNo.Yes : YesOrNo.No;
     }
 
     private static List<Element<InterpreterNeed>> buildInterpreterNeeds(List<String> languageList,
@@ -99,7 +112,7 @@ public class CaseDataReasonableAdjustmentsElementsMapper {
                     .party(List.of(applicant)).otherAssistance(needInterpreterInCertainLanguageDetails).build();
             return List.of(Element.<InterpreterNeed>builder().value(interpreterNeed).build());
         }
-        return null;
+        return Collections.emptyList();
     }
 
     private static YesOrNo buildInterpreterNeeded(List<String> languageList) {
@@ -174,7 +187,7 @@ public class CaseDataReasonableAdjustmentsElementsMapper {
 
     private static String buildHelpTravellingMovingBuildingSupport(String[] travellingCourt,
                                                                    C100RebuildReasonableAdjustmentsElements c100RaElements) {
-        return Arrays.stream(travellingCourt).collect(Collectors.toList()).stream()
+        return Arrays.stream(travellingCourt).toList().stream()
                 .map(element -> buildTravellingCourtElement(element,
                         c100RaElements.getParkingSpaceSubField(),
                         c100RaElements.getDifferentTypeChairSubField(),
@@ -197,7 +210,7 @@ public class CaseDataReasonableAdjustmentsElementsMapper {
 
     private static String buildFeelComfortableSupport(String[] feelComfortable,
                                                       C100RebuildReasonableAdjustmentsElements c100RaElements) {
-        return Arrays.stream(feelComfortable).collect(Collectors.toList()).stream()
+        return Arrays.stream(feelComfortable).toList().stream()
                 .map(element -> buildFeelComfortableElement(element,
                         c100RaElements.getAppropriateLightingSubField(),
                         c100RaElements.getFeelComfortableOtherSubField()))
@@ -217,7 +230,7 @@ public class CaseDataReasonableAdjustmentsElementsMapper {
 
     private static String buildExtraSupport(String[] supportCourt, C100RebuildReasonableAdjustmentsElements
             c100RaElements) {
-        return Arrays.stream(supportCourt).collect(Collectors.toList()).stream()
+        return Arrays.stream(supportCourt).toList().stream()
                 .map(element -> buildSupportCourtElement(element,
                         c100RaElements.getSupportWorkerCarerSubField(),
                         c100RaElements.getFriendFamilyMemberSubField(),
@@ -244,7 +257,7 @@ public class CaseDataReasonableAdjustmentsElementsMapper {
 
     private static String buildCommunicationHelp(String[] communicationHelp, C100RebuildReasonableAdjustmentsElements
             c100RaElements) {
-        return Arrays.stream(communicationHelp).collect(Collectors.toList()).stream()
+        return Arrays.stream(communicationHelp).toList().stream()
                 .map(element -> buildCommunicationHelpElement(element,
                         c100RaElements.getSignLanguageInterpreterDetails(),
                         c100RaElements.getCommunicationHelpOtherDetails()))
@@ -264,7 +277,7 @@ public class CaseDataReasonableAdjustmentsElementsMapper {
 
     private static String buildDocumentInformation(String[] documentInformation, C100RebuildReasonableAdjustmentsElements
             c100RaElements) {
-        return Arrays.stream(documentInformation).collect(Collectors.toList()).stream()
+        return Arrays.stream(documentInformation).toList().stream()
                 .map(element -> buildDocumentInformationElement(element,
                         c100RaElements.getSpecifiedColorDocumentsDetails(), c100RaElements.getLargePrintDocumentsDetails(),
                         c100RaElements.getOtherDetails()))
