@@ -10,12 +10,15 @@ import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
 import uk.gov.hmcts.reform.ccd.document.am.feign.CaseDocumentClient;
 import uk.gov.hmcts.reform.prl.exception.InvalidResourceException;
-import uk.gov.hmcts.reform.prl.models.dto.GeneratedDocumentInfo;
+import uk.gov.hmcts.reform.prl.models.documents.Document;
+import uk.gov.hmcts.reform.prl.services.document.DocumentGenService;
 import uk.gov.hmcts.reform.sendletter.api.LetterWithPdfsRequest;
 import uk.gov.hmcts.reform.sendletter.api.SendLetterApi;
 import uk.gov.hmcts.reform.sendletter.api.SendLetterResponse;
 
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -23,7 +26,6 @@ import java.util.Optional;
 import java.util.UUID;
 
 import static java.util.Base64.getEncoder;
-import static java.util.stream.Collectors.toList;
 
 @Service
 @Slf4j
@@ -33,6 +35,7 @@ public class BulkPrintService {
     private static final String XEROX_TYPE_PARAMETER = "PRL001";
     private static final String LETTER_TYPE_KEY = "letterType";
     private static final String CASE_REFERENCE_NUMBER_KEY = "caseReferenceNumber";
+    private static final String RECIPIENTS = "recipients";
     private static final String CASE_IDENTIFIER_KEY = "caseIdentifier";
 
     private final SendLetterApi sendLetterApi;
@@ -41,33 +44,59 @@ public class BulkPrintService {
 
     private final AuthTokenGenerator authTokenGenerator;
 
+    private final DocumentGenService documentGenService;
 
-    public UUID send(String caseId, String userToken, String letterType, List<GeneratedDocumentInfo> documents) {
 
+
+    public UUID send(String caseId, String userToken, String letterType, List<Document> documents, String recipientName) {
         String s2sToken = authTokenGenerator.generate();
+        List<Document> pdfDocuments = new ArrayList<>();
 
-        final List<String> stringifiedDocuments = documents.stream()
-            .map(docInfo -> getDocumentBytes(docInfo.getUrl(), userToken, s2sToken))
+        try {
+            for (Document doc:documents) {
+                pdfDocuments.add(documentGenService.convertToPdf(userToken, doc));
+            }
+        } catch (NullPointerException e) {
+            throw new NullPointerException("Null Pointer exception at bulk print send : " + e);
+        } catch (Exception e) {
+            log.info("The bulk print service has failed during convertToPdf: {}", e);
+        }
+
+        final List<String> stringifiedDocuments = pdfDocuments.stream()
+            .map(docInfo -> getDocumentsAsBytes(docInfo.getDocumentBinaryUrl(), userToken, s2sToken))
             .map(getEncoder()::encodeToString)
-            .collect(toList());
-
+            .toList();
         log.info("Sending {} for case {}", letterType, caseId);
-        SendLetterResponse sendLetterResponse = sendLetterApi.sendLetter(
-            s2sToken,
-            new LetterWithPdfsRequest(stringifiedDocuments, XEROX_TYPE_PARAMETER, getAdditionalData(caseId, letterType))
-        );
 
-        log.info("Letter service produced the following letter Id {} for case {}", sendLetterResponse.letterId, caseId);
-        return sendLetterResponse.letterId;
+        SendLetterResponse sendLetterResponse = sendLetterApi.sendLetter(
+                s2sToken,
+                new LetterWithPdfsRequest(
+                    stringifiedDocuments,
+                    XEROX_TYPE_PARAMETER,
+                    getAdditionalData(caseId, letterType, recipientName)
+                )
+            );
+
+        log.info(
+            "Letter service produced the following letter Id {} for case {}",
+            sendLetterResponse != null ? sendLetterResponse.letterId : "SOMETHING WRONG",
+            caseId
+        );
+        return sendLetterResponse != null ? sendLetterResponse.letterId : null;
     }
 
 
-    private Map<String, Object> getAdditionalData(String caseId, String letterType) {
+    private Map<String, Object> getAdditionalData(String caseId, String letterType, String recipientName) {
         final Map<String, Object> additionalData = new HashMap<>();
         additionalData.put(LETTER_TYPE_KEY, letterType);
         additionalData.put(CASE_IDENTIFIER_KEY, caseId);
         additionalData.put(CASE_REFERENCE_NUMBER_KEY, caseId);
+        additionalData.put(RECIPIENTS, Arrays.asList(recipientName));
         return additionalData;
+    }
+
+    private byte[] getDocumentsAsBytes(String docUrl, String authToken, String s2sToken) {
+        return getDocumentBytes(docUrl, authToken, s2sToken);
     }
 
     private byte[] getDocumentBytes(String docUrl, String authToken, String s2sToken) {
@@ -89,4 +118,5 @@ public class BulkPrintService {
             })
             .orElseThrow(() -> new InvalidResourceException("Resource is invalid " + fileName));
     }
+
 }
