@@ -9,6 +9,7 @@ import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
 import uk.gov.hmcts.reform.prl.clients.OrganisationApi;
 import uk.gov.hmcts.reform.prl.enums.YesNoDontKnow;
 import uk.gov.hmcts.reform.prl.models.Element;
+import uk.gov.hmcts.reform.prl.models.OrgSolicitors;
 import uk.gov.hmcts.reform.prl.models.Organisations;
 import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
@@ -16,7 +17,6 @@ import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import javax.ws.rs.NotFoundException;
 
 import static java.util.Optional.ofNullable;
@@ -25,10 +25,8 @@ import static java.util.Optional.ofNullable;
 @Slf4j
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class OrganisationService {
-
-    @Autowired
+    public static final String ACTIVE = "Active";
     private final OrganisationApi organisationApi;
-
     private Organisations organisations;
     private final AuthTokenGenerator authTokenGenerator;
     private final SystemUserService systemUserService;
@@ -39,10 +37,10 @@ public class OrganisationService {
             String userToken = systemUserService.getSysUserToken();
             List<Element<PartyDetails>> applicants = caseData.getApplicants()
                 .stream()
-                .map(eachItem ->  Element.<PartyDetails>builder()
-                    .value(getApplicantWithOrg(eachItem.getValue(),userToken))
+                .map(eachItem -> Element.<PartyDetails>builder()
+                    .value(getApplicantWithOrg(eachItem.getValue(), userToken))
                     .id(eachItem.getId()).build())
-                .collect(Collectors.toList());
+                .toList();
             caseData = caseData.toBuilder()
                 .applicants(applicants)
                 .build();
@@ -58,10 +56,10 @@ public class OrganisationService {
 
             List<Element<PartyDetails>> respondents = caseData.getRespondents()
                 .stream()
-                .map(eachItem ->  Element.<PartyDetails>builder()
-                    .value(getRespondentWithOrg(eachItem.getValue(),userToken))
+                .map(eachItem -> Element.<PartyDetails>builder()
+                    .value(getRespondentWithOrg(eachItem.getValue(), userToken))
                     .id(eachItem.getId()).build())
-                .collect(Collectors.toList());
+                .toList();
 
             caseData = caseData.toBuilder().respondents(respondents).build();
         }
@@ -76,7 +74,7 @@ public class OrganisationService {
             String organisationID = respondent.getSolicitorOrg().getOrganisationID();
             if (organisationID != null) {
                 try {
-                    organisations = getOrganisationDetaiils(userToken, organisationID);
+                    organisations = getOrganisationDetails(userToken, organisationID);
                     respondent = respondent.toBuilder()
                         .organisations(organisations)
                         .build();
@@ -84,13 +82,15 @@ public class OrganisationService {
                     log.error(
                         "OrganisationsAPi return 404, organisation not present for {} {} ",
                         organisationID,
-                        e.getMessage()
+                        e.getMessage(),
+                        e
                     );
                 } catch (Exception e) {
                     log.error(
                         "Error while fetching org details for orgid {} {} ",
                         organisationID,
-                        e.getMessage()
+                        e.getMessage(),
+                        e
                     );
                 }
             }
@@ -98,10 +98,18 @@ public class OrganisationService {
         return respondent;
     }
 
-    public Organisations getOrganisationDetaiils(String userToken, String organisationID) {
+    public Organisations getOrganisationDetails(String userToken, String organisationID) {
         log.trace("Fetching organisation details for organisation id: {}", organisationID);
-
         return organisationApi.findOrganisation(userToken, authTokenGenerator.generate(), organisationID);
+    }
+
+    public OrgSolicitors getOrganisationSolicitorDetails(String userToken, String organisationID) {
+        log.trace("Fetching all solicitor details for organisation id: {}", organisationID);
+        return organisationApi.findOrganisationSolicitors(
+            userToken,
+            authTokenGenerator.generate(),
+            organisationID
+        );
     }
 
     private PartyDetails getApplicantWithOrg(PartyDetails applicant, String userToken) {
@@ -111,8 +119,7 @@ public class OrganisationService {
             String organisationID = applicant.getSolicitorOrg().getOrganisationID();
             if (organisationID != null) {
                 try {
-                    organisations = getOrganisationDetaiils(userToken, organisationID);
-
+                    organisations = getOrganisationDetails(userToken, organisationID);
                     applicant = applicant.toBuilder()
                         .organisations(organisations)
                         .build();
@@ -120,13 +127,15 @@ public class OrganisationService {
                     log.error(
                         "OrganisationsAPi return 404, organisation not present for {} {} ",
                         organisationID,
-                        e.getMessage()
+                        e.getMessage(),
+                        e
                     );
                 } catch (Exception e) {
                     log.error(
                         "Error while fetching org details for orgid {} {} ",
                         organisationID,
-                        e.getMessage()
+                        e.getMessage(),
+                        e
                     );
                 }
             }
@@ -136,12 +145,23 @@ public class OrganisationService {
         return applicant;
     }
 
-    public CaseData getApplicantOrganisationDetailsForFL401(CaseData caseData)  {
+    public CaseData getApplicantOrganisationDetailsForFL401(CaseData caseData) {
         if (Optional.ofNullable(caseData.getApplicantsFL401()).isPresent()) {
             String userToken = systemUserService.getSysUserToken();
             PartyDetails applicantWithOrg = getApplicantWithOrg(caseData.getApplicantsFL401(), userToken);
             caseData = caseData.toBuilder()
                 .applicantsFL401(applicantWithOrg)
+                .build();
+        }
+        return caseData;
+    }
+
+    public CaseData getRespondentOrganisationDetailsForFL401(CaseData caseData) {
+        if (Optional.ofNullable(caseData.getRespondentsFL401()).isPresent()) {
+            String userToken = systemUserService.getSysUserToken();
+            PartyDetails respondentWithOrg = getRespondentWithOrg(caseData.getRespondentsFL401(), userToken);
+            caseData = caseData.toBuilder()
+                .respondentsFL401(respondentWithOrg)
                 .build();
         }
         return caseData;
@@ -155,4 +175,12 @@ public class OrganisationService {
             return Optional.empty();
         }
     }
+
+    public List<Organisations> getAllActiveOrganisations(String userToken) {
+        log.trace("Fetching all active organisation details");
+        Object orgObject = organisationApi.findOrganisations(userToken, authTokenGenerator.generate(), ACTIVE);
+        log.info("Fetching all active organisation details ==> " + orgObject);
+        return (List<Organisations>) orgObject;
+    }
+
 }
