@@ -11,7 +11,7 @@ import uk.gov.hmcts.reform.prl.models.cafcass.hearing.CaseHearing;
 import uk.gov.hmcts.reform.prl.models.cafcass.hearing.Hearings;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 
 @Service("cafcassHearingService")
@@ -24,6 +24,8 @@ public class HearingService {
 
     private Hearings hearingDetails;
 
+    private List<Hearings> listOfHearingDetails;
+
     private final AuthTokenGenerator authTokenGenerator;
 
     private final HearingApiClient hearingApiClient;
@@ -33,11 +35,19 @@ public class HearingService {
             hearingDetails = hearingApiClient.getHearingDetails(userToken, authTokenGenerator.generate(), caseReferenceNumber);
             filterHearings();
         } catch (Exception e) {
-            log.error(e.getMessage());
+            log.error("Error in getHearings", e);
         }
         return hearingDetails;
     }
 
+    public List<Hearings> getHearingsForAllCases(String userToken, Map<String,String> caseIdWithRegionIdMap) {
+        try {
+            listOfHearingDetails = hearingApiClient.getHearingDetailsForAllCaseIds(userToken, authTokenGenerator.generate(), caseIdWithRegionIdMap);
+        } catch (Exception e) {
+            log.error("Error while getHearingsForAllCases {}",e);
+        }
+        return listOfHearingDetails;
+    }
 
     private void filterHearings() {
 
@@ -45,15 +55,14 @@ public class HearingService {
 
             final List<CaseHearing> caseHearings = hearingDetails.getCaseHearings();
 
-            final List<String> hearingStatuses = hearingStatusList.stream().map(String::trim).collect(Collectors.toList());
+            final List<String> hearingStatuses = hearingStatusList.stream().map(String::trim).toList();
 
             final List<CaseHearing> hearings = caseHearings.stream()
                     .filter(hearing ->
                         hearingStatuses.stream().anyMatch(hearingStatus -> hearingStatus.equals(
                             hearing.getHmcStatus()))
                     )
-                .collect(
-                    Collectors.toList());
+                .toList();
 
 
             // if we find any hearing after filteration, change hmc status to null as it's not required in response.
