@@ -2,87 +2,60 @@ package uk.gov.hmcts.reform.prl.services.citizen;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.ccd.client.CoreCaseDataApi;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.idam.client.IdamClient;
 import uk.gov.hmcts.reform.idam.client.models.UserDetails;
-import uk.gov.hmcts.reform.prl.constants.PrlAppsConstants;
+import uk.gov.hmcts.reform.prl.clients.ccd.CcdCoreCaseDataService;
 import uk.gov.hmcts.reform.prl.enums.CaseEvent;
-import uk.gov.hmcts.reform.prl.enums.YesOrNo;
 import uk.gov.hmcts.reform.prl.mapper.citizen.CaseDataMapper;
-import uk.gov.hmcts.reform.prl.models.Element;
-import uk.gov.hmcts.reform.prl.models.caseinvite.CaseInvite;
-import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
-import uk.gov.hmcts.reform.prl.models.complextypes.citizen.User;
+import uk.gov.hmcts.reform.prl.models.c100rebuild.C100RebuildApplicantDetailsElements;
+import uk.gov.hmcts.reform.prl.models.c100rebuild.C100RebuildData;
+import uk.gov.hmcts.reform.prl.models.c100rebuild.C100RebuildRespondentDetailsElements;
+import uk.gov.hmcts.reform.prl.models.citizen.CaseDataWithHearingResponse;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 import uk.gov.hmcts.reform.prl.models.user.UserInfo;
 import uk.gov.hmcts.reform.prl.repositories.CaseRepository;
-import uk.gov.hmcts.reform.prl.services.CourtFinderService;
-import uk.gov.hmcts.reform.prl.services.SystemUserService;
-import uk.gov.hmcts.reform.prl.services.tab.alltabs.AllTabServiceImpl;
-import uk.gov.hmcts.reform.prl.utils.CaseDetailsConverter;
+import uk.gov.hmcts.reform.prl.services.RoleAssignmentService;
+import uk.gov.hmcts.reform.prl.services.cafcass.HearingService;
 import uk.gov.hmcts.reform.prl.utils.CaseUtils;
 
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.UUID;
-import java.util.stream.Collectors;
 
+import static org.apache.commons.lang3.StringUtils.isEmpty;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_DEFAULT_COURT_NAME;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CASE_TYPE;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.JURISDICTION;
+import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.TASK_LIST_VERSION_V2;
 import static uk.gov.hmcts.reform.prl.enums.CaseEvent.CITIZEN_CASE_SUBMIT;
 import static uk.gov.hmcts.reform.prl.enums.CaseEvent.CITIZEN_CASE_SUBMIT_WITH_HWF;
+import static uk.gov.hmcts.reform.prl.enums.CaseEvent.CITIZEN_CASE_UPDATE;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.wrapElements;
-
 
 @Slf4j
 @Service
+@RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class CaseService {
+    public static final String YES = "Yes";
+    private final CoreCaseDataApi coreCaseDataApi;
+    private final CaseRepository caseRepository;
+    private final IdamClient idamClient;
+    private final ObjectMapper objectMapper;
+    private final CaseDataMapper caseDataMapper;
+    private final RoleAssignmentService roleAssignmentService;
+    private final CcdCoreCaseDataService ccdCoreCaseDataService;
+    private final HearingService hearingService;
 
-    public static final String LINK_CASE = "linkCase";
-    public static final String CITIZEN_INTERNAL_CASE_UPDATE = "citizen-internal-case-update";
-    @Autowired
-    CoreCaseDataApi coreCaseDataApi;
-
-    @Autowired
-    CaseDetailsConverter caseDetailsConverter;
-
-    @Autowired
-    CaseRepository caseRepository;
-
-    @Autowired
-    IdamClient idamClient;
-
-    @Autowired
-    ObjectMapper objectMapper;
-
-    @Autowired
-    SystemUserService systemUserService;
-
-    @Autowired
-    CaseDataMapper caseDataMapper;
-
-    @Autowired
-    CitizenEmailService citizenEmailService;
-
-    @Autowired
-    AllTabServiceImpl allTabsService;
-
-    @Autowired
-    CourtFinderService courtLocatorService;
-
-    public CaseDetails updateCase(CaseData caseData, String authToken, String s2sToken,
-                                  String caseId, String eventId, String accessCode) throws JsonProcessingException {
-
-        if (LINK_CASE.equalsIgnoreCase(eventId) && null != accessCode) {
-            linkCitizenToCase(authToken, s2sToken, accessCode, caseId);
-            return caseRepository.getCase(authToken, caseId);
-        }
+    public CaseDetails updateCase(CaseData caseData, String authToken,
+                                  String caseId, String eventId) throws JsonProcessingException {
         if (CITIZEN_CASE_SUBMIT.getValue().equalsIgnoreCase(eventId)
             || CITIZEN_CASE_SUBMIT_WITH_HWF.getValue().equalsIgnoreCase(eventId)) {
             UserDetails userDetails = idamClient.getUserDetails(authToken);
@@ -96,16 +69,56 @@ public class CaseService {
 
             CaseData updatedCaseData = caseDataMapper
                 .buildUpdatedCaseData(caseData.toBuilder().userInfo(wrapElements(userInfo))
-                                          .courtName(PrlAppsConstants.C100_DEFAULT_COURT_NAME)
+                                          .courtName(C100_DEFAULT_COURT_NAME)
+                                          .taskListVersion(TASK_LIST_VERSION_V2)
                                           .build());
             return caseRepository.updateCase(authToken, caseId, updatedCaseData, CaseEvent.fromValue(eventId));
         }
+        if (CITIZEN_CASE_UPDATE.getValue().equalsIgnoreCase(eventId)
+            && isEmpty(caseData.getApplicantCaseName())) {
+            caseData = caseData.toBuilder()
+                .applicantCaseName(buildApplicantAndRespondentForCaseName(caseData))
+                .build();
+        }
+
         return caseRepository.updateCase(authToken, caseId, caseData, CaseEvent.fromValue(eventId));
     }
 
-    public List<CaseData> retrieveCases(String authToken, String s2sToken) {
-        Map<String, String> searchCriteria = new HashMap<>();
+    public String buildApplicantAndRespondentForCaseName(CaseData caseData) throws JsonProcessingException {
+        C100RebuildData c100RebuildData = caseData.getC100RebuildData();
+        ObjectMapper mapper = new ObjectMapper();
+        C100RebuildApplicantDetailsElements c100RebuildApplicantDetailsElements = null;
+        C100RebuildRespondentDetailsElements c100RebuildRespondentDetailsElements = null;
+        if (null != c100RebuildData) {
+            if (StringUtils.isNotEmpty(c100RebuildData.getC100RebuildApplicantDetails())) {
+                c100RebuildApplicantDetailsElements = mapper
+                    .readValue(c100RebuildData.getC100RebuildApplicantDetails(), C100RebuildApplicantDetailsElements.class);
+            }
 
+            if (StringUtils.isNotEmpty(c100RebuildData.getC100RebuildRespondentDetails())) {
+                c100RebuildRespondentDetailsElements = mapper
+                    .readValue(c100RebuildData.getC100RebuildRespondentDetails(), C100RebuildRespondentDetailsElements.class);
+            }
+        }
+        return buildCaseName(c100RebuildApplicantDetailsElements, c100RebuildRespondentDetailsElements);
+    }
+
+
+    private String buildCaseName(C100RebuildApplicantDetailsElements c100RebuildApplicantDetailsElements,
+                                 C100RebuildRespondentDetailsElements c100RebuildRespondentDetailsElements) {
+        String caseName = null;
+        if (null != c100RebuildApplicantDetailsElements
+            && null != c100RebuildRespondentDetailsElements.getRespondentDetails()) {
+            caseName = c100RebuildApplicantDetailsElements.getApplicants().get(0).getApplicantLastName() + " V "
+                + c100RebuildRespondentDetailsElements.getRespondentDetails().get(0).getLastName();
+        }
+
+        return caseName;
+    }
+
+    public List<CaseData> retrieveCases(String authToken, String s2sToken) {
+
+        Map<String, String> searchCriteria = new HashMap<>();
         searchCriteria.put("sortDirection", "desc");
         searchCriteria.put("page", "1");
 
@@ -121,7 +134,7 @@ public class CaseService {
         return caseDetails
             .stream()
             .map(caseDetail -> CaseUtils.getCaseData(caseDetail, objectMapper))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<CaseDetails> performSearch(String authToken, UserDetails user, Map<String, String> searchCriteria,
@@ -140,97 +153,6 @@ public class CaseService {
         return result;
     }
 
-    public void linkCitizenToCase(String authorisation, String s2sToken, String accessCode, String caseId) {
-        UserDetails userDetails = idamClient.getUserDetails(authorisation);
-        String anonymousUserToken = systemUserService.getSysUserToken();
-        String userId = userDetails.getId();
-        String emailId = userDetails.getEmail();
-
-        CaseData caseData = objectMapper.convertValue(
-            coreCaseDataApi.getCase(anonymousUserToken, s2sToken, caseId).getData(),
-            CaseData.class
-        );
-        log.info("caseId {}", caseId);
-        if ("Valid".equalsIgnoreCase(findAccessCodeStatus(accessCode, caseData))) {
-            UUID partyId = null;
-            YesOrNo isApplicant = YesOrNo.Yes;
-
-            for (Element<CaseInvite> invite : caseData.getCaseInvites()) {
-                if (accessCode.equals(invite.getValue().getAccessCode())) {
-                    partyId = invite.getValue().getPartyId();
-                    isApplicant = invite.getValue().getIsApplicant();
-                    invite.getValue().setHasLinked("Yes");
-                    invite.getValue().setInvitedUserId(userId);
-                }
-            }
-
-            processUserDetailsForCase(userId, emailId, caseData, partyId, isApplicant);
-
-            caseRepository.linkDefendant(authorisation, anonymousUserToken, caseId, caseData);
-        }
-    }
-
-    private void processUserDetailsForCase(String userId, String emailId, CaseData caseData, UUID partyId,
-                                           YesOrNo isApplicant) {
-        //Assumption is for C100 case PartyDetails will be part of list
-        // and will always contain the partyId
-        // whereas FL401 will have only one party details without any partyId
-        User user = User.builder().email(emailId)
-            .idamId(userId).build();
-        if (partyId != null) {
-            getValuesFromPartyDetails(caseData, partyId, isApplicant, user);
-        } else {
-            if (YesOrNo.Yes.equals(isApplicant)) {
-                caseData.getApplicantsFL401().setUser(user);
-            } else {
-                caseData.getRespondentsFL401().setUser(user);
-            }
-        }
-    }
-
-    private void getValuesFromPartyDetails(CaseData caseData, UUID partyId, YesOrNo isApplicant, User user) {
-        if (YesOrNo.Yes.equals(isApplicant)) {
-            for (Element<PartyDetails> partyDetails : caseData.getApplicants()) {
-                if (partyId.equals(partyDetails.getId())) {
-                    partyDetails.getValue().setUser(user);
-                }
-            }
-        } else {
-            for (Element<PartyDetails> partyDetails : caseData.getRespondents()) {
-                if (partyId.equals(partyDetails.getId())) {
-                    partyDetails.getValue().setUser(user);
-                }
-            }
-        }
-    }
-
-    public String validateAccessCode(String authorisation, String s2sToken, String caseId, String accessCode) {
-        CaseData caseData = objectMapper.convertValue(
-            coreCaseDataApi.getCase(authorisation, s2sToken, caseId).getData(),
-            CaseData.class
-        );
-        return findAccessCodeStatus(accessCode, caseData);
-    }
-
-    private String findAccessCodeStatus(String accessCode, CaseData caseData) {
-        String accessCodeStatus = "Invalid";
-        List<CaseInvite> matchingCaseInvite = caseData.getCaseInvites()
-            .stream()
-            .map(Element::getValue)
-            .filter(x -> accessCode.equals(x.getAccessCode()))
-            .collect(Collectors.toList());
-
-        if (!matchingCaseInvite.isEmpty()) {
-            accessCodeStatus = "Valid";
-            for (CaseInvite caseInvite : matchingCaseInvite) {
-                if ("Yes".equals(caseInvite.getHasLinked())) {
-                    accessCodeStatus = "Linked";
-                }
-            }
-        }
-        return accessCodeStatus;
-    }
-
     public CaseDetails getCase(String authToken, String caseId) {
         return caseRepository.getCase(authToken, caseId);
     }
@@ -239,4 +161,23 @@ public class CaseService {
         return caseRepository.createCase(authToken, caseData);
     }
 
+    public Map<String, String> fetchIdamAmRoles(String authorisation, String emailId) {
+        return roleAssignmentService.fetchIdamAmRoles(authorisation, emailId);
+    }
+
+    public CaseDataWithHearingResponse getCaseWithHearing(String authorisation, String caseId, String hearingNeeded) {
+        CaseDataWithHearingResponse caseDataWithHearingResponse = CaseDataWithHearingResponse.builder().build();
+        CaseDetails caseDetails = ccdCoreCaseDataService.findCaseById(authorisation, caseId);
+        CaseData caseData = CaseUtils.getCaseData(caseDetails, objectMapper);
+        caseData = caseData.toBuilder().noOfDaysRemainingToSubmitCase(
+            CaseUtils.getRemainingDaysSubmitCase(caseData)).build();
+        caseDataWithHearingResponse = caseDataWithHearingResponse.toBuilder().caseData(caseData).build();
+        if ("Yes".equalsIgnoreCase(hearingNeeded)) {
+            caseDataWithHearingResponse =
+                caseDataWithHearingResponse.toBuilder().hearings(
+                    hearingService.getHearings(authorisation, caseId)).build();
+        }
+
+        return caseDataWithHearingResponse;
+    }
 }
